# beefore

./: .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  MANIFEST.in  README.rst  beekeeper.yml  pre-commit.sh  setup.cfg  setup.py
.github/workflows/: build_status.yml  ci.yml
beefore/: __init__.py  __main__.py  check.py  command.py  constants.py  diff.py  github.py
beefore/checks/: dco.py  eslint.py  javacheckstyle.py  pycodestyle.py
docs/: Makefile  conf.py  index.rst  requirements.txt
src/beefore/: __init__.py  __main__.py  diff.py  github.py  local.py
src/beefore/checks/: dco.py  eslint.py  javacheckstyle.py  pycodestyle.py
tests/: diff_test.py  test_diff_positions.py
